// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/fragment-v2/Performance/lib/EstimateValue render empty 1`] = `
<Styled(MuiBox)
  className="makeStyles-docValue-2"
>
  <Typography
    className=""
    color="primary-main"
    inline={false}
    variant="subtitle2"
    weight="medium"
  />
</Styled(MuiBox)>
`;

exports[`src/fragment-v2/Performance/lib/EstimateValue render loading 1`] = `
<Styled(MuiBox)
  className="makeStyles-docValue-3"
>
  <Skeleton
    height={27}
    variant="rect"
    width="100%"
  />
</Styled(MuiBox)>
`;

exports[`src/fragment-v2/Performance/lib/EstimateValue render success 1`] = `
<Styled(MuiBox)
  className="makeStyles-docValue-1"
>
  <Typography
    className=""
    color="primary-main"
    inline={false}
    variant="subtitle2"
    weight="medium"
  >
    123
  </Typography>
</Styled(MuiBox)>
`;
